<resources>
    <string name="app_name">TryItAt</string>
    <string name="discover_a_whole_new_world_discover_new_stuff_from_people_s_ex">Discover a whole New world, \ndiscover new stuff from people\'s \nexperiences and posts, Don\'t \nmiss out on the fun near you!</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter">Enter</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="registration">Registration</string>
    <string name="by_clicking">By clicking \"Registration\" you agree to</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="our">our</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="food_drink"><![CDATA[Food & Drink]]></string>
    <string name="_3849_products">0 Post</string>
    <string name="fashion">Fashion</string>
    <string name="home_others"><![CDATA[Home & Others]]></string>
    <string name="success">Success</string>
    <string name="all_items">All Items</string>
    <string name="local_business_login">Local Business Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="local_business_sign_up">Local Business \nSign Up</string>
    <string name="store_name">Store Name</string>
    <string name="title_activity_maps">Map</string>02
    <string name="pick_location">Pick Location</string>
    <string name="location">Location</string>

    <string name="facebook_app_id">759360164990481</string>
    <string name="fb_login_protocol_scheme">fb759360164990481</string>
    <string name="your_account_created_successfully">Your account created successfully. You will be able to login in after your account is approved</string>
    <string name="ok">OK</string>
    <string name="follow">Follow</string>
    <string name="dashboard">Dashboard</string>
    <string name="account_setting">Account Settings</string>
    <string name="edit_nimage">Edit \nImage</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="about_yourself">About Yourself</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="save">Save</string>
    <string name="headline">Headline</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="no_post">No Post</string>
    <string name="local_businesses">Local Businesses</string>
    <string name="write_comment_here">Write Comment Here</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="customer_list">Customer List</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="tags">Tags</string>
    <string name="loyalty_program1">Loyalty Program:</string>
    <string name="edit">Edit</string>
    <string name="scan_qr">Scan QR</string>
    <string name="points">Points</string>

    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="create_your_try">Create your try</string>
    <string name="sub_title">Sub Title</string>
    <string name="title">Title</string>
    <string name="write_your_review">Write your review</string>
    <string name="rate_it">Rate it</string>
    <string name="do_you_like_this_product">1. Do you like this product?</string>
    <string name="do_you_recommend_it_for_a_friend">2. Do you recommend it for a friend</string>
    <string name="select_category">Select Category</string>

    <string name="food__drink"><![CDATA[Food & Drink]]></string>
    <string name="fashions">Fashion</string>
    <string name="home__others"><![CDATA[Home & Others]]></string>


    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>