<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_1"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:background="@drawable/white_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:background="@drawable/white_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/remember_me_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:checked="true"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        android:layout_marginStart="@dimen/_32sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toTopOf="@id/remember_me_checked"
        app:layout_constraintStart_toEndOf="@id/remember_me_checked"
        app:layout_constraintBottom_toBottomOf="@id/remember_me_checked"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginEnd="@dimen/_32sdp"
        app:layout_constraintTop_toTopOf="@id/remember_me_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/remember_me_checked"/>

    <TextView
        android:id="@+id/enter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:background="@drawable/white_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/facebook_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        android:background="@drawable/facebook_login_btn"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@id/enter_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/sign_up_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_e_mail"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/facebook_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>