<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_1"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/white_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/transparent_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/business_login_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/local_business_login"
        android:background="@drawable/yellow_square_bg"
        android:paddingVertical="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>